--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
