--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('resume-example.pdf')"
           >
             Download CV
           </button>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <!-- <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="about-pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -87,7 +87,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -97,7 +97,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -106,7 +106,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -128,7 +128,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
    
 </section>
       <img
-        src="./assets/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -144,7 +144,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -155,7 +155,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -166,7 +166,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -177,7 +177,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -194,7 +194,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -206,7 +206,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -217,7 +217,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -228,7 +228,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -259,7 +259,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
         <h2 class="experience-sub-title project-title">Major Projects</h2>
         <div class="article-container">
           <article>
-            <img src="./assets/checkmark.png" alt="Project Icon" class="icon" />
+            <img src="checkmark.png" alt="Project Icon" class="icon" />
             <div>
               <h3>Virtual Mouse using Hand Gestures</h3>
               <p>
@@ -286,7 +286,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
         <h2 class="experience-sub-title project-title">Academic Projects</h2>
         <div class="article-container">
           <article>
-            <img src="./assets/checkmark.png" alt="Project Icon" class="icon" />
+            <img src="checkmark.png" alt="Project Icon" class="icon" />
             <div>
               <h3>Robotic Arm Movement Control using IR Sensor and Servo Motor</h3>
               <p>
@@ -296,7 +296,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
             </div>
           </article>
           <article>
-            <img src="./assets/checkmark.png" alt="Project Icon" class="icon" />
+            <img src="checkmark.png" alt="Project Icon" class="icon" />
             <div>
               <h3>Stress Detection and Alert System (Ongoing)</h3>
               <p>
@@ -311,7 +311,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
     </div>
   </div>
   <img
-    src="./assets/arrow.png"
+    src="arrow.png"
     alt="Arrow icon"
     class="icon arrow"
     onclick="location.href='./#contact'"
@@ -324,7 +324,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -332,7 +332,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
@@ -351,7 +351,7 @@ With hands-on experience and a keen interest in bridging the gap between theoret
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Mukta Mali. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 Mukta Mali. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
